MODSOURCE-752: Emit Domain Events For Source Records (#635)